--- a/index.css
+++ b/index.css
@@ -5,25 +5,22 @@
 }
 
 body {
-    background-image: linear-gradient(to right, aqua, blueviolet);
+    background: #0468BF url(./img/Criptografia.gif);
+    background-size: cover;
+    color: white;
     height: 100vh;
     width: 100vw;
 }
 
-.titulo {
-    height: 100px;
-    display: block;
-    text-align: center;
-    padding: 15px;
-}
-
 form {
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 fieldset {
+    background: #000000c4;
     width: 500px;
     height: 500px;
     display: flex;
@@ -34,13 +31,15 @@ fieldset {
 }
 
 textarea{
-    width: 325px;
-    height: 125px;
+    width: 430px;
+    height: 130px;
+    border: 1px solid;
+    border-radius: 5px;
     margin-top: 25px;
 }
 
 
-h1, p, input, fieldset {
+h1, .paragrafo, input, fieldset {
     margin-top: 15px;
 }
 
@@ -49,4 +48,42 @@ select{
     border-radius: 5px;
     height: 35px;
     
+}
+
+.opcao {
+    margin-top: 10px;
+    border: solid 1px;
+    border-radius: 8px;
+}
+.cod{
+    margin-right: 20px;
+}
+
+.passo {
+    width: 110px;
+    height: 35px;
+    border-radius: 5px;
+    display: none;
+} 
+
+.saida {
+    width: 430px;
+    height: 130px;
+    border: 1px solid;
+    background: white;
+    color: black;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+.botao-js {
+    width: 100px;
+    height: 35px;
+    text-transform: uppercase;
+    margin: 10px;
+    border-radius: 7px;
+}
+
+.botao-js:hover {
+    width: 2s, height 2s, transform 2s;
 }
