--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: #0468BF url(./img/Criptografia.gif);
+    /* background: #0468BF url(./img/Criptografia.gif); */
     background-size: cover;
     color: white;
     height: 100vh;
@@ -36,6 +36,8 @@ textarea{
     border: 1px solid;
     border-radius: 5px;
     margin-top: 25px;
+    max-width: 430px;
+    max-height: 130px;
 }
 
 
@@ -50,11 +52,7 @@ select{
     
 }
 
-.opcao {
-    margin-top: 10px;
-    border: solid 1px;
-    border-radius: 8px;
-}
+
 .cod{
     margin-right: 20px;
 }
@@ -76,14 +74,15 @@ select{
     margin-top: 20px;
 }
 
-.botao-js {
+.btn-html {
     width: 100px;
     height: 35px;
     text-transform: uppercase;
     margin: 10px;
     border-radius: 7px;
+    background: #00F3F7;
+    color: #001842;
 }
 
-.botao-js:hover {
-    width: 2s, height 2s, transform 2s;
-}
+
+
