--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    /* background: #0468BF url(./img/Criptografia.gif); */
+    background: #0468BF url(./img/Criptografia.gif);
     background-size: cover;
     color: white;
     height: 100vh;
@@ -36,8 +36,11 @@ textarea{
     border: 1px solid;
     border-radius: 5px;
     margin-top: 25px;
-    max-width: 430px;
-    max-height: 130px;
+    max-width: 400px;
+    max-height: 110px;
+    min-width:400px;
+    min-height:110px ;
+    text-decoration: none;
 }
 
 
